--- a/main.css
+++ b/main.css
@@ -206,8 +206,8 @@ header:hover input.toggle:checked + label div#navbar a {
   border: 5px double var(--dim-color);
   border-radius: 50%;
   padding: 8px;
-  height: 5vh;
-  width: auto;
+  height: 2em;
+  width: 2em;
   box-shadow: 0 0 0 0 var(--background);
   animation: 1s pulse infinite;
 }
@@ -220,7 +220,7 @@ header:hover input.toggle:checked + label div#navbar a {
 
 @keyframes pulse {
   to {
-    box-shadow: 0 0 0 2.5px var(--sub-card-color);
+    box-shadow: 0 0 0 6px var(--sub-card-color);
   }
 }
 
@@ -272,6 +272,8 @@ section h2 {
   align-items: center;
   margin-top: 2em;
   margin-bottom: 2em;
+  padding-left: 4em;
+  padding-right: 4em;
 }
 
 .title h2 {
@@ -395,10 +397,10 @@ section h2 {
 }
 
 #specialite .card img {
-  height: auto;
+  height: 14vw;
   border-radius: 25px;
   transition: 1s;
-  width: 22vw;
+  width: 21vw;
 }
 
 #specialite .card h3 {
@@ -428,7 +430,7 @@ button {
 
 #debouches a .button button:hover {
   cursor: pointer;
-  transform: scale(1.3);
+  transform: scale(1.1);
   background-color: #3d5f80;
 }
 
@@ -473,6 +475,7 @@ button {
 #ionis .text .card img {
   border-radius: 5em;
   margin: 2em;
+  transition: 3s;
 }
 
 #ionis .text .card img:hover {
@@ -668,6 +671,7 @@ footer #redirect a {
 
   #specialite .card img {
     width: 60vw;
+    height: 40vw;
   }
 
   .title {
@@ -779,6 +783,7 @@ footer #redirect a {
 
   #specialite .card img {
     width: 30vw;
+    height: 20vw;
   }
 
   .title {
