--- a/trombinoscope.css
+++ b/trombinoscope.css
@@ -15,6 +15,10 @@
   --dark-color: #000000;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   background-color: var(--brand-color);
@@ -207,7 +211,7 @@ main {
   grid-gap: 2em 0.5em;
   background-color: var(--card-color);
   padding: 3em;
-  border-radius: 50px;
+  border-radius: 25px;
 }
 
 #trombinoscope #grid .card {
@@ -338,18 +342,15 @@ footer #redirect a {
   }
 
   #trombinoscope #grid {
-    padding: 1.5em;
-  }
-
-  #trombinoscope #grid {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2em 0.5em;
+    padding: 1.2em;
   }
 
   #trombinoscope #grid .card img {
     border: solid 0.5em var(--sub-card-color);
-    width: 20vw;
-    height: 20vw;
+    width: 30vw;
+    height: 30vw;
   }
 
   footer {
